# TestTask

./: .gitignore  CMakeLists.txt  Makefile  bmpreader.cpp  config.h.in  main.cpp  readme.md  shared_container.cpp  shared_container.h
include/: bmpreader.h  config.h  shared_container.h
